--- a/web.html
+++ b/web.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio website</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h3>MY first portfolio website </h3>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
