--- a/web.html
+++ b/web.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <header>
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Button</a></li>
+            </ul>
+            
+        </nav>
 
     </header>
     <main>
