--- a/web.html
+++ b/web.html
@@ -15,12 +15,23 @@
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="">portfolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href=""><button>Hire Me</button></a></li>
+                <li><a class="dark-2" href="">portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary" >Hire Me</button></a></li>
             </ul>
             
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings">Hi, I am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, aliquid reprehenderit, itaque quidem tempora odio iste quas quaerat qui totam sequi. Quae sapiente, cumque fugit consectetur sunt ipsum animi. Voluptate?</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+
+            </div>
+            <img class="banner-profile-picture" src="images/hardy.png" alt="">
+        </div>
 
     </header>
     <main>
