--- a/web.html
+++ b/web.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header secondary-background" >
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -35,6 +35,31 @@
 
     </header>
     <main>
+        <section class="about secondary-background">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint doloremque consequuntur minima eius modi veniam ullam, corrupti corporis dolor tempore? Voluptatibus doloremque delectus amet dolor, aperiam molestiae reiciendis vitae repellat.</p>
+
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">name</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">abc@gamail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-description">Dec 14,1977</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Dhaka</p>
+                </div>
+            </div>
+
+
+        </section>
 
     </main>
     <footer>
